// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectBase callbacks should call onClearAllSelected on Clear button click 1`] = `
<div>
  <div
    class="SelectBase"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-12-label"
      class="SelectBase__main"
      role="combobox"
    >
      <div
        class="FieldWrapper SelectBase__field"
      >
        <div
          class="FieldWrapper__content"
        >
          <input
            aria-autocomplete="list"
            aria-labelledby="downshift-12-label"
            autocomplete="off"
            id="downshift-12-input"
            value=""
          />
          <ul
            aria-labelledby="downshift-12-label"
            class="List"
            id="downshift-12-menu"
            role="listbox"
          />
        </div>
        <button
          class="Button Button--size_small Button--variant_ghost Button--context_secondary FieldWrapper__clearButton FieldWrapper__clearButton--rightIndent"
          title="Clear"
          type="button"
        >
          <svg
            aria-label="Clear"
            fill="currentColor"
            height="16"
            role="img"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
        <svg
          class="FieldWrapper__dropdownIcon"
          fill="currentColor"
          height="1em"
          role="button"
          stroke="currentColor"
          stroke-width="0"
          tabindex="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M128 192l128 128 128-128z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectBase highlighting should highlight first item 1`] = `
<div>
  <div
    class="SelectBase"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-10-label"
      class="SelectBase__main"
      role="combobox"
    >
      <div
        class="FieldWrapper SelectBase__field"
      >
        <div
          class="FieldWrapper__content"
        >
          <input
            aria-autocomplete="list"
            aria-labelledby="downshift-10-label"
            autocomplete="off"
            id="downshift-10-input"
            value=""
          />
          <ul
            aria-labelledby="downshift-10-label"
            class="List"
            id="downshift-10-menu"
            role="listbox"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectBase rendering should initially render empty component correctly 1`] = `
<div>
  <div
    class="SelectBase"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-0-label"
      class="SelectBase__main"
      role="combobox"
    >
      <div
        class="FieldWrapper SelectBase__field"
      >
        <div
          class="FieldWrapper__content"
        >
          <input
            aria-autocomplete="list"
            aria-labelledby="downshift-0-label"
            autocomplete="off"
            id="downshift-0-input"
            value=""
          />
          <ul
            aria-labelledby="downshift-0-label"
            class="List"
            id="downshift-0-menu"
            role="listbox"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectBase with toggle arrow should show arrows when showArrow is true 1`] = `
<div>
  <div
    class="SelectBase"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-1-label"
      class="SelectBase__main"
      role="combobox"
    >
      <div
        class="FieldWrapper SelectBase__field"
      >
        <div
          class="FieldWrapper__content"
        >
          <input
            aria-autocomplete="list"
            aria-labelledby="downshift-1-label"
            autocomplete="off"
            id="downshift-1-input"
            value=""
          />
          <ul
            aria-labelledby="downshift-1-label"
            class="List"
            id="downshift-1-menu"
            role="listbox"
          />
        </div>
        <svg
          class="FieldWrapper__dropdownIcon"
          fill="currentColor"
          height="1em"
          role="button"
          stroke="currentColor"
          stroke-width="0"
          tabindex="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M128 192l128 128 128-128z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectBase with toggle arrow should toggle focus and the arrow when it is clicked 1`] = `
<div>
  <div
    class="SelectBase"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-2-label"
      class="SelectBase__main"
      role="combobox"
    >
      <div
        class="FieldWrapper SelectBase__field"
      >
        <div
          class="FieldWrapper__content"
        >
          <input
            aria-autocomplete="list"
            aria-labelledby="downshift-2-label"
            autocomplete="off"
            id="downshift-2-input"
            value=""
          />
          <ul
            aria-labelledby="downshift-2-label"
            class="List"
            id="downshift-2-menu"
            role="listbox"
          />
        </div>
        <svg
          class="FieldWrapper__dropdownIcon"
          fill="currentColor"
          height="1em"
          role="button"
          stroke="currentColor"
          stroke-width="0"
          tabindex="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M128 192l128 128 128-128z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
